fix whitespace

--- a/client/src/styling/Hike.css
+++ b/client/src/styling/Hike.css
@@ -1,8 +1,7 @@
 .hike-list{
     padding-top: 175px;
-    padding-bottom: 100px;
+    padding-bottom: 150px;
     margin: 0 45px 0 45px;
-    height: 100vh;
 }
 
 .hike-header{
